--- a/src/app/ui/pages/animations/Animation.css
+++ b/src/app/ui/pages/animations/Animation.css
@@ -131,7 +131,7 @@
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: 25% !important;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -233,7 +233,8 @@
     margin-bottom: 20px;
   }
   .search {
-    width: 410%;
+    width: 100%;
+    margin-bottom: 0;
   }
   .choose-us-product {
     flex-direction: column;
@@ -283,9 +284,12 @@
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
-  width: 35%;
+  width: 94%;
   padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* background-color: #f9f9f9; */
+  border-radius: 0;
+  box-shadow: 0;
+}
+.product-search-container {
+  padding: 0 20px;
 }
